package au.com.codeka.warworlds.common.proto;

import "common.proto";

// The role an AdminUser has in the backend.
enum AdminRole {
  // The administrator role gets access to everything.
  ADMINISTRATOR = 1;
}

// An admin user is used by the backend to do authentication and authorization.
message AdminUser {
  // The email address of the user. We authenticate using google login.
  optional string email_addr = 1;

  // This user's role in the backend.
  optional AdminRole role = 2;
}
